[gd_scene load_steps=3 format=3 uid="uid://pause_menu_001"]

[ext_resource type="Script" path="res://1.Codebase/src/scripts/ui/pause_menu.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="1"]
bg_color = Color(0.15, 0.2, 0.3, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.4, 0.6, 0.8, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="DarkOverlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.7)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Panel" type="Panel" parent="CenterContainer"]
custom_minimum_size = Vector2(800, 650)
layout_mode = 2
theme_override_styles/panel = SubResource("1")

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Title" type="Label" parent="CenterContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "GAME PAUSED"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="CenterContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TokenReportPanel" type="Panel" parent="CenterContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 200)
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/Panel/MarginContainer/VBoxContainer/TokenReportPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="TokenReportBox" type="VBoxContainer" parent="CenterContainer/Panel/MarginContainer/VBoxContainer/TokenReportPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TokenReportTitle" type="Label" parent="CenterContainer/Panel/MarginContainer/VBoxContainer/TokenReportPanel/MarginContainer/TokenReportBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.9, 1, 1)
theme_override_font_sizes/font_size = 22
text = "AI Token Usage Summary"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="CenterContainer/Panel/MarginContainer/VBoxContainer/TokenReportPanel/MarginContainer/TokenReportBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="TokenReportText" type="RichTextLabel" parent="CenterContainer/Panel/MarginContainer/VBoxContainer/TokenReportPanel/MarginContainer/TokenReportBox/ScrollContainer"]
custom_minimum_size = Vector2(700, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
fit_content = true
text = "No requests sent yet"

[node name="HSeparator2" type="HSeparator" parent="CenterContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ButtonsContainer" type="VBoxContainer" parent="CenterContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="ResumeButton" type="Button" parent="CenterContainer/Panel/MarginContainer/VBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(400, 55)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 24
text = "CONTINUE"

[node name="SettingsButton" type="Button" parent="CenterContainer/Panel/MarginContainer/VBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(400, 55)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 24
text = "SETTINGS"

[node name="JournalButton" type="Button" parent="CenterContainer/Panel/MarginContainer/VBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(400, 55)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 24
text = "JOURNAL"

[node name="AchievementsButton" type="Button" parent="CenterContainer/Panel/MarginContainer/VBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(400, 55)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 24
text = "ACHIEVEMENTS"

[node name="RelationshipButton" type="Button" parent="CenterContainer/Panel/MarginContainer/VBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(400, 55)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 24
text = "CHARACTERS"

[node name="HomeButton" type="Button" parent="CenterContainer/Panel/MarginContainer/VBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(400, 55)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 24
text = "RETURN TO MENU"
